[ci skip] New Crowdin translations (#97)

--- a/public/locales/cs-CZ/pricing.json
+++ b/public/locales/cs-CZ/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Rozvíjet životní prostředí",
     "app-public": "Veřejná aplikace",
     "restore-data": "Zálohování a obnovení",
-    "deployed": "Přístup k nasazenému inženýrovi",
-    "dedicated": "Specializovaný inženýr řešení"
+    "deployed": "Přístup k podpoře",
+    "dedicated": "Inženýr řešení"
   },
   "tips": {
     "plugins": "Importujte pluginy a využívejte je ve všech aplikacích ve vašich týmech",
@@ -61,8 +61,8 @@
   "free-members": "Pouze 1 člen pro osobní použití",
   "unlimited-viewer": "ZDARMA pro neomezený počet diváků",
   "unlimited-members": "Neomezený počet členů",
-  "free-btn": "Sestavit aplikace zdarma",
-  "plus-btn": "Vyzkoušejte bezplatnou verzi",
+  "free-btn": "Zkus zadarmo",
+  "plus-btn": "Zkus zadarmo",
   "enterprise-btn": "Kontaktujte nás",
   "open-source": "Open Source",
   "source-desc": "Samostatně hostitel se všemi funkcemi, které potřebují jednotliví vývojáři nebo malé týmy vytvářet interní aplikace. Poskytujeme zdarma ILLA CLI s lepší ochranou pro zajištění bezpečnosti údajů.",
