--- a/public/locales/da-DK/pricing.json
+++ b/public/locales/da-DK/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Udvikle miljø",
     "app-public": "Offentlig app",
     "restore-data": "Sikkerhedskopiér og gendan",
-    "deployed": "Adgang til en implementeret ingeniør",
-    "dedicated": "Udvikler af dedikeret løsninger"
+    "deployed": "Adgang til support",
+    "dedicated": "Løsningsingeniør"
   },
   "tips": {
     "plugins": "Importer plugins og gør brug af det inden for alle apps i dine teams",
@@ -62,7 +62,7 @@
   "unlimited-viewer": "GRATIS for ubegrænset seere",
   "unlimited-members": "Ubegrænsede medlemmer",
   "free-btn": "Byg apps gratis",
-  "plus-btn": "Prøv den gratis version",
+  "plus-btn": "Prøv gratis",
   "enterprise-btn": "Kontakt os",
   "open-source": "Open Source",
   "source-desc": "Selv-vært med alle funktioner individuelle udviklere eller små teams har brug for at opbygge interne applikationer. Vi leverer gratis ILLA CLI med bedre sikkerhed for at sikre datasikkerheden.",
