--- a/public/locales/de-DE/pricing.json
+++ b/public/locales/de-DE/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Entwicklungsumgebung",
     "app-public": "App öffentlich",
     "restore-data": "Backup und Wiederherstellen",
-    "deployed": "Zugriff auf einen eingesetzten Ingenieur",
-    "dedicated": "Dedicated Solutions Engineer"
+    "deployed": "Zugang zum Support",
+    "dedicated": "Lösungsingenieur"
   },
   "tips": {
     "plugins": "Importiere Plugins und nutze sie innerhalb aller Apps in deinen Teams",
@@ -61,8 +61,8 @@
   "free-members": "Nur ein Mitglied für den persönlichen Gebrauch",
   "unlimited-viewer": "GRATIS für unbegrenzte Zuschauer",
   "unlimited-members": "Unbegrenzte Mitglieder",
-  "free-btn": "Apps kostenlos erstellen",
-  "plus-btn": "Probiere die kostenlose Version aus",
+  "free-btn": "Kostenlos testen",
+  "plus-btn": "Kostenlos testen",
   "enterprise-btn": "Kontaktiere uns",
   "open-source": "Open Source",
   "source-desc": "Self-Host mit allen Features einzelner Entwickler oder kleiner Teams müssen interne Anwendungen erstellen. Wir bieten ILLA CLI kostenlos mit besserer Sicherheit zur Datensicherheit.",
