--- a/public/locales/el-GR/pricing.json
+++ b/public/locales/el-GR/pricing.json
@@ -22,7 +22,7 @@
     "app-public": "Δημόσια εφαρμογή",
     "restore-data": "Αντίγραφα ασφαλείας και επαναφορά",
     "deployed": "Πρόσβαση σε έναν ανεπτυγμένο μηχανικό",
-    "dedicated": "Μηχανικός Dedicated Solutions"
+    "dedicated": "Μηχανικός λύσεων"
   },
   "tips": {
     "plugins": "Εισαγωγή plugins και χρήση του μέσα σε όλες τις εφαρμογές στις ομάδες σας",
@@ -61,8 +61,8 @@
   "free-members": "Μόνο 1 μέλος για προσωπική χρήση",
   "unlimited-viewer": "ΔΩΡΕΑΝ για απεριόριστους θεατές",
   "unlimited-members": "Απεριόριστα μέλη",
-  "free-btn": "Κατασκευή εφαρμογών δωρεάν",
-  "plus-btn": "Δοκιμάστε τη δωρεάν έκδοση",
+  "free-btn": "Δοκίμασε δωρεάν",
+  "plus-btn": "Δοκίμασε δωρεάν",
   "enterprise-btn": "Επικοινωνήστε μαζί μας",
   "open-source": "Ανοικτός Κώδικας",
   "source-desc": "Αυτο-οικοδεσπότης με όλες τις δυνατότητες μεμονωμένοι προγραμματιστές ή μικρές ομάδες πρέπει να οικοδομήσουμε εσωτερικές εφαρμογές. Παρέχουμε στο ILLA CLI δωρεάν καλύτερη ασφάλεια για την ασφάλεια των δεδομένων.",
