--- a/public/locales/es-ES/pricing.json
+++ b/public/locales/es-ES/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Desarrollar entorno",
     "app-public": "Aplicación pública",
     "restore-data": "Copia de seguridad y restauración",
-    "deployed": "Acceso a un ingeniero desplegado",
-    "dedicated": "Ingeniero de Soluciones Dedicadas"
+    "deployed": "Acceso al soporte de ILLA",
+    "dedicated": "Ingeniero de soluciones"
   },
   "tips": {
     "plugins": "Importar plugins y hacer uso de él dentro de todas las aplicaciones de tus equipos",
@@ -61,8 +61,8 @@
   "free-members": "Sólo 1 miembro para uso personal",
   "unlimited-viewer": "GRATIS para espectadores ilimitados",
   "unlimited-members": "Miembros ilimitados",
-  "free-btn": "Construir aplicaciones gratis",
-  "plus-btn": "Prueba la versión gratuita",
+  "free-btn": "Probar ahora",
+  "plus-btn": "Pruebe la versión gratis",
   "enterprise-btn": "Contáctenos",
   "open-source": "Código abierto",
   "source-desc": "Auto-host con todas las características que los desarrolladores individuales o pequeños equipos necesitan para construir aplicaciones internas. Proporcionamos gratuitamente a ILLA CLI una mejor seguridad para garantizar la seguridad de los datos.",
