--- a/public/locales/fi-FI/pricing.json
+++ b/public/locales/fi-FI/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Ympäristön kehittäminen",
     "app-public": "Sovellus julkinen",
     "restore-data": "Varmuuskopioi ja palauta",
-    "deployed": "Pääsy käyttöön otettuun insinööriin",
-    "dedicated": "Omistetut ratkaisut insinööri"
+    "deployed": "Pääsy tukeen",
+    "dedicated": "Ratkaisuinsinööri"
   },
   "tips": {
     "plugins": "Tuo liitännäiset ja käytä niitä kaikissa tiimiesi sovelluksissa",
@@ -61,8 +61,8 @@
   "free-members": "Vain 1 jäsen henkilökohtaiseen käyttöön",
   "unlimited-viewer": "ILMAINEN rajoittamattomille katsojille",
   "unlimited-members": "Rajoittamattomat jäsenet",
-  "free-btn": "Koosta sovelluksia ilmaiseksi",
-  "plus-btn": "Kokeile ilmaista versiota",
+  "free-btn": "Kokeile ilmaiseksi",
+  "plus-btn": "Kokeile ilmaiseksi",
   "enterprise-btn": "Ota yhteyttä",
   "open-source": "Avoin Lähdekoodi",
   "source-desc": "Itse isäntä kaikki ominaisuudet yksittäisten kehittäjien tai pienten joukkueiden täytyy rakentaa sisäisiä sovelluksia. Tarjoamme ILLA CLI:lle ilmaisen paremman turvan tietoturvallisuuden takaamiseksi.",
