--- a/public/locales/fr-FR/pricing.json
+++ b/public/locales/fr-FR/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Développer un environnement",
     "app-public": "Application publique",
     "restore-data": "Sauvegarde et restauration",
-    "deployed": "Accès à un ingénieur déployé",
-    "dedicated": "Ingénieur de solutions dédiées"
+    "deployed": "Accès à l'assistance",
+    "dedicated": "Ingénieur solutions"
   },
   "tips": {
     "plugins": "Importer des plugins et les utiliser dans toutes les applications de vos équipes",
@@ -61,8 +61,8 @@
   "free-members": "Un seul membre pour un usage personnel",
   "unlimited-viewer": "GRATUIT pour les spectateurs illimités",
   "unlimited-members": "Membres illimités",
-  "free-btn": "Construire des applications gratuitement",
-  "plus-btn": "Essayez la version gratuite",
+  "free-btn": "Essayer gratuitement",
+  "plus-btn": "Essayer gratuitement",
   "enterprise-btn": "Contactez-nous",
   "open-source": "Open Source",
   "source-desc": "Autonomie avec toutes les fonctionnalités des développeurs individuels ou des petites équipes ont besoin de construire des applications internes. Nous fournissons gratuitement le CLI ILLA pour une meilleure sécurité afin d'assurer la sécurité des données.",
