--- a/public/locales/it-IT/pricing.json
+++ b/public/locales/it-IT/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Sviluppa ambiente",
     "app-public": "App public",
     "restore-data": "Backup e ripristino",
-    "deployed": "Accesso a un ingegnere dispiegato",
-    "dedicated": "Ingegnere di soluzioni dedicate"
+    "deployed": "Accesso al supporto ILLA",
+    "dedicated": "Ingegnere delle soluzioni"
   },
   "tips": {
     "plugins": "Importa plugin e utilizzali all'interno di tutte le app del tuo team",
@@ -62,7 +62,7 @@
   "unlimited-viewer": "GRATIS per spettatori illimitati",
   "unlimited-members": "Membri illimitati",
   "free-btn": "Costruisci app gratis",
-  "plus-btn": "Prova la versione gratuita",
+  "plus-btn": "Prova gratis",
   "enterprise-btn": "Contattaci",
   "open-source": "Open Source",
   "source-desc": "Self-host con tutte le funzionalità singoli sviluppatori o piccoli team devono costruire applicazioni interne. Forniamo ILLA CLI gratuitamente con una migliore sicurezza per garantire la sicurezza dei dati.",
