--- a/public/locales/nl-NL/pricing.json
+++ b/public/locales/nl-NL/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Ontwikkel omgeving",
     "app-public": "App publiek",
     "restore-data": "Back-up maken en herstellen",
-    "deployed": "Toegang tot een ingezette ingenieur",
-    "dedicated": "Eigen oplossingen ingenieur"
+    "deployed": "Toegang tot ondersteuning",
+    "dedicated": "Oplossingen ingenieur"
   },
   "tips": {
     "plugins": "Importeer plugins en maak er gebruik van binnen alle apps in uw teams",
@@ -62,7 +62,7 @@
   "unlimited-viewer": "GRATIS voor onbeperkte kijkers",
   "unlimited-members": "Onbeperkt aantal leden",
   "free-btn": "Bouw gratis apps",
-  "plus-btn": "Probeer de gratis versie",
+  "plus-btn": "Probeer gratis",
   "enterprise-btn": "Contacteer ons",
   "open-source": "Open bron",
   "source-desc": "Zelf-host met alle functies van individuele ontwikkelaars of kleine teams moeten interne applicaties bouwen. We bieden de ILLA CLI gratis aan om de gegevensveiligheid te waarborgen.",
