--- a/public/locales/no-NO/pricing.json
+++ b/public/locales/no-NO/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Utvikle miljø",
     "app-public": "App offentlig",
     "restore-data": "Sikkerhetskopiering og gjenoppretting",
-    "deployed": "Tilgang til en distribuert ingeniør",
-    "dedicated": "Dedikerte løsninger ingeniør"
+    "deployed": "Tilgang til ILLA Support",
+    "dedicated": "Løsningsingeniør"
   },
   "tips": {
     "plugins": "Importer programtillegg og bruk det innenfor alle appene i dine team",
@@ -62,7 +62,7 @@
   "unlimited-viewer": "GRATIS for ubegrenset antall seere",
   "unlimited-members": "Ubegrenset antall medlemmer",
   "free-btn": "Bygg apper gratis",
-  "plus-btn": "Prøv gratis versjonen",
+  "plus-btn": "Prøv gratis",
   "enterprise-btn": "Kontakt oss",
   "open-source": "Åpen Kildekode",
   "source-desc": "Selv-vert med alle funksjonene individuelle utviklere eller små team må bygge interne applikasjoner. Vi gir ILLA-CLI gratis med bedre sikkerhet for å ivareta datasikkerheten.",
