--- a/public/locales/ro-RO/pricing.json
+++ b/public/locales/ro-RO/pricing.json
@@ -21,7 +21,7 @@
     "develop-environment": "Dezvoltarea mediului",
     "app-public": "Aplicație publică",
     "restore-data": "Backup și restaurare",
-    "deployed": "Accesul la un inginer instalat",
+    "deployed": "Acces la suport ILLA",
     "dedicated": "Inginer dedicat soluțiilor"
   },
   "tips": {
@@ -61,8 +61,8 @@
   "free-members": "Doar 1 membru pentru uz personal",
   "unlimited-viewer": "GRATUIT pentru telespectatori nelimitați",
   "unlimited-members": "Membri nelimitați",
-  "free-btn": "Construiește aplicații gratuite",
-  "plus-btn": "Încercați versiunea gratuită",
+  "free-btn": "Încearcă pe gratis",
+  "plus-btn": "Încearcă pe gratis",
   "enterprise-btn": "Contactați-ne",
   "open-source": "Sursă deschisă",
   "source-desc": "Auto-gazdă cu toate caracteristicile specifice dezvoltatorilor individuali sau echipelor mici trebuie să construiască aplicații interne. Oferim ILLA CLI gratuit cu o mai bună securitate pentru a asigura siguranța datelor.",
