--- a/public/locales/ru-RU/pricing.json
+++ b/public/locales/ru-RU/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Окружение развития",
     "app-public": "Публичное приложение",
     "restore-data": "Резервное копирование и восстановление",
-    "deployed": "Доступ к развернутому инженеру",
-    "dedicated": "Специализированный инженер по решениям"
+    "deployed": "Доступ к поддержке ИЛЛА",
+    "dedicated": "Инженер по решениям"
   },
   "tips": {
     "plugins": "Импортируйте плагины и пользуйтесь ими во всех приложениях ваших команд",
@@ -61,8 +61,8 @@
   "free-members": "Только 1 участник для личного использования",
   "unlimited-viewer": "Бесплатно для неограниченного зрителя",
   "unlimited-members": "Неограниченное число участников",
-  "free-btn": "Бесплатно создавать приложения",
-  "plus-btn": "Попробуйте бесплатную версию",
+  "free-btn": "Попробуй бесплатно",
+  "plus-btn": "Попробуй бесплатно",
   "enterprise-btn": "Свяжитесь с нами",
   "open-source": "Открытый код",
   "source-desc": "Самохост со всеми возможностями отдельных разработчиков или небольших команд необходимо создать внутренние приложения. Мы бесплатно предоставляем ILLA CLI для повышения безопасности для обеспечения безопасности данных.",
