--- a/public/locales/sv-SE/pricing.json
+++ b/public/locales/sv-SE/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Utveckla miljö",
     "app-public": "Publik app",
     "restore-data": "Säkerhetskopiera och återställ",
-    "deployed": "Tillgång till en utplacerad ingenjör",
-    "dedicated": "Dedikerad Lösningar ingenjör"
+    "deployed": "Tillgång till ILLA Support",
+    "dedicated": "Lösningsingenjör"
   },
   "tips": {
     "plugins": "Importera plugins och utnyttja det i alla appar i dina team",
@@ -62,7 +62,7 @@
   "unlimited-viewer": "GRATIS för obegränsat antal tittare",
   "unlimited-members": "Obegränsat antal medlemmar",
   "free-btn": "Bygg appar gratis",
-  "plus-btn": "Prova gratisversionen",
+  "plus-btn": "Prova gratis",
   "enterprise-btn": "Kontakta oss",
   "open-source": "Öppen källkod",
   "source-desc": "Själv-värd med alla funktioner som enskilda utvecklare eller små team behöver för att bygga interna program. Vi ger ILLA CLI gratis bättre säkerhet för att säkerställa datasäkerhet.",
