--- a/public/locales/pl-PL/pricing.json
+++ b/public/locales/pl-PL/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Rozwój środowiska",
     "app-public": "Publiczna aplikacja",
     "restore-data": "Kopia zapasowa i przywracanie",
-    "deployed": "Dostęp do wdrożonego inżyniera",
-    "dedicated": "Dedykowany inżynier Rozwiązań"
+    "deployed": "Dostęp do wsparcia ILLA",
+    "dedicated": "Inżynier rozwiązań"
   },
   "tips": {
     "plugins": "Importuj wtyczki i użyj ich we wszystkich aplikacjach w zespołach",
@@ -61,8 +61,8 @@
   "free-members": "Tylko 1 członek do użytku osobistego",
   "unlimited-viewer": "DARMOWA dla nieograniczonej liczby widzów",
   "unlimited-members": "Nieograniczona liczba członków",
-  "free-btn": "Tworzenie aplikacji za darmo",
-  "plus-btn": "Wypróbuj wersję darmową",
+  "free-btn": "Wypróbuj za darmo",
+  "plus-btn": "Wypróbuj za darmo",
   "enterprise-btn": "Skontaktuj się z nami",
   "open-source": "Otwarte źródło",
   "source-desc": "Samo-host ze wszystkimi funkcjami indywidualni deweloperzy lub małe zespoły muszą budować wewnętrzne aplikacje. Dostarczamy ILLA CLI za darmo w celu zapewnienia lepszego bezpieczeństwa danych.",
