--- a/public/locales/pt-PT/pricing.json
+++ b/public/locales/pt-PT/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Desenvolver ambiente",
     "app-public": "Aplicativo público",
     "restore-data": "Backup e restauração",
-    "deployed": "Acesso a um engenheiro implantado",
-    "dedicated": "Engenheiro de Soluções dedicado"
+    "deployed": "Acesso ao Suporte ILLA",
+    "dedicated": "Engenheiro de soluções"
   },
   "tips": {
     "plugins": "Importe plugins e use-os em todos os aplicativos das suas equipes",
@@ -61,8 +61,8 @@
   "free-members": "Apenas 1 membro para uso pessoal",
   "unlimited-viewer": "GRÁTIS para espectadores ilimitados",
   "unlimited-members": "Membros ilimitados",
-  "free-btn": "Crie aplicativos gratuitamente",
-  "plus-btn": "Experimente a versão gratuita",
+  "free-btn": "Tente agora",
+  "plus-btn": "Teste a versão grátis",
   "enterprise-btn": "Entre em contato",
   "open-source": "Código-fonte aberto",
   "source-desc": "Auto-hospedar com todos os recursos que os desenvolvedores individuais ou as pequenas equipes precisam para construir aplicativos internos. Oferecemos a CLI ILLA gratuitamente com maior segurança para garantir a segurança dos dados.",
