--- a/public/locales/uk-UA/pricing.json
+++ b/public/locales/uk-UA/pricing.json
@@ -21,8 +21,8 @@
     "develop-environment": "Розвиток навколишнього середовища",
     "app-public": "Публічний додаток",
     "restore-data": "Резервне копіювання і відновлення",
-    "deployed": "Доступ до розгорнутого інженера",
-    "dedicated": "Виділений інженер рішень"
+    "deployed": "Доступ до нашої підтримки",
+    "dedicated": "Інженер з рішень"
   },
   "tips": {
     "plugins": "Імпортуйте плагіни і використовуйте їх у всіх програмах у ваших командах",
@@ -61,8 +61,8 @@
   "free-members": "Тільки 1 учасник для особистого використання",
   "unlimited-viewer": "БЕЗКОШТОВНА для необмеженої кількості глядачів",
   "unlimited-members": "Учасники без обмежень",
-  "free-btn": "Створити застосунки безкоштовно",
-  "plus-btn": "Спробуйте безкоштовну версію",
+  "free-btn": "Спробуйте безкоштовно",
+  "plus-btn": "Спробуйте безкоштовно",
   "enterprise-btn": "Зв'язатися з нами",
   "open-source": "Відкритий вихідний код",
   "source-desc": "Само-хост з усіма функціями індивідуальними розробниками або невеликими командами має створювати внутрішні додатки. Ми надаємо ILLA CLI безкоштовно з кращою безпекою для безпеки даних.",
